--- a/index.html
+++ b/index.html
@@ -18,40 +18,46 @@
             <h1>Arisaka</h1>
         </div>
     </div>
-    <div class="right_container">
-        <div class="textContainer">
-            <p class="bigP">This is not a real online service! 
+    <div class="rightContainer">
+        <div class="toprightContainer">
+            <div class="textContainer">
+                <p class="bigP">This is not a real online service! 
                 You know you need something like this in your life to help you realize your deepest dreams.
                 <br> Sign up <i>now</i> to get started.</p>
-            <p class="medP">You <i>know</i> you want to.</p>
-            <p class="smallP">Let's do this!</p>
+                <p class="medP">You <i>know</i> you want to.</p>
+                <p class="smallP">Let's do this!</p>
+           </div>
+           <form>
+                <div class="firstName">
+                    <label for="name">FIRST NAME</label>
+                    <input type="text" name="firstName" id="firstName" required>
+                </div>
+                <div class="lastName">
+                    <label for="name">LAST NAME</label>
+                    <input type="text" name="lastName" id="lastName" required>
+                </div>
+                <div class="email">
+                    <label for="email">EMAIL</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+                <div class="phoneNum">
+                    <label for="phone">PHONE NUMBER</label>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+                </div>
+                <div class="password">
+                  <label for="password">PASSWORD</label>
+                  <input type="password" name="password" id="password" required>
+                </div>
+                <div class="confirmPassword">
+                  <label for="password"> CONFIRM PASSWORD</label>
+                  <input type="password" name="confirmPassword" id="confirmPassword" required>
+                </div>  
+            </form>
         </div>
-        <form>
-            <div class="firstName">
-                <label for="name">FIRST NAME</label>
-                <input type="text" name="firstName" id="firstName" required>
-            </div>
-            <div class="lastName">
-                <label for="name">LAST NAME</label>
-                <input type="text" name="lastName" id="lastName" required>
-            </div>
-            <div class="email">
-                <label for="email">EMAIL</label>
-                <input type="email" name="email" id="email" required>
-            </div>
-            <div class="phoneNum">
-                <label for="phone">PHONE NUMBER</label>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-            </div>
-            <div class="password">
-                <label for="password">PASSWORD</label>
-                <input type="password" name="password" id="password" required>
-            </div>
-            <div class="confirmPassword">
-                <label for="password"> CONFIRM PASSWORD</label>
-                <input type="password" name="confirmPassword" id="confirmPassword" required>
-            </div>
-        </form>
+        <div class="bottomrightContainer">
+        <button class="account"> Create Account</button>
+        <p class="loginText">Already have an account? <a class="login" href="https://www.google.com/">Log in</a></p>
+        </div>
     </div>
     <script src="myscript.js"></script>
 </body>
